nginx-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
  labels:
    cluster: test
  namespace: nginx
spec:
  gateways:
  - istio-system/public
  hosts:
  - nginx.bigbang.dev
  http:
  - route:
    - destination:
         host: nginx-service
         port:
            number: 7000
